Revision history for Perl extension PPM::Make.

0.97  Sat, Sep 19, 2009
  - In PPM::Make::Meta::parse_make, skip MAN3PODS that can appear 
    if some words from @wanted found (patch supllied by Serguei Trouchelle)
  - Address CPAN dist download failure:
     http://rt.cpan.org/Ticket/Display.html?id=49717

0.96 Fri, Dec 26, 2008
  - if distro misses NAME, use DISTNAME if available (patch provided by 
    Serguei Trouchelle)
  - fix problem with v-style versions of modules when creating PPD 
    and tgz/zip bundle with --vsr (patch provided by Serguei Trouchelle)
  - omit warning when development version of Archive::Tar is used (patch 
    provided by Serguei Trouchelle).
  - refactor searching for ppm info into PPM::Make::Search
  - use META information available from http://cpan.uwinnipeg.ca/
    so that SOAP::Lite isn't required
  - add the make_ppm_install script, and associated module
    PPM::Make::CPAN, for use as the make_install_make_command
    within CPAN.pm to install modules via ppm.

0.95 Sat, Dec 22, 2007
  - fix architecture string addition (eg, MSWin32-x86-multi-thread-5.10)
    so as to work with perl-5.10

0.94 Sun, June 10, 2007
  - workaround for  a bug in Net::FTP 2.77, which drops the last 
    character on each line when putting file in ASCII mode (provided 
    by Serguey Trouchelle)
  - remove whitespace from version string (provided by Serguey Trouchelle)
  - have settings in Makefile override those in META.yml; in particular,
    this avoids problem of version strings not being updated in
    META.yml (suggested by Serguey Trouchelle)

0.93 Tues, Jan 11, 2007
  - sort summary files by package name

0.92 Thur, Dec 21, 2006

  - wrap parsing of the ppd files in RepositorySummary.pm
    around an eval, to catch errors (suggested by
    Serguey Trouchelle)
  - use CONTENTS exclusively in parse_bundle of Meta.pm
    to exract contents of a Bundle file, as some Bundles
    also include a DESCRIPTION (suggested by
    Serguey Trouchelle)
